--- a/traefik/traefik.yml
+++ b/traefik/traefik.yml
@@ -14,12 +14,9 @@ providers:
     exposedByDefault: false
 
 certificatesResolvers:
-  cloudflare:
+  letsencrypt:
     acme:
       email: kelvin.cleto@accelera360.com.br
       storage: acme.json
-      dnsChallenge:
-        provider: cloudflare
-        resolvers:
-          - "1.1.1.1:53"
-          - "1.0.0.1:53"
+      httpChallenge:
+        entryPoint: http
